--- a/package.json
+++ b/package.json
@@ -10,31 +10,41 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@babel/core": "^7.19.3",
         "@emotion/react": "^11.10.4",
+        "@emotion/server": "^11.10.0",
         "@mantine/core": "^5.5.1",
         "@mantine/hooks": "^5.5.1",
+        "@mantine/next": "^5.5.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
+        "@tabler/icons": "^1.101.0",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
+        "@types/node": "18.8.0",
+        "@types/react": "18.0.21",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "^5.38.1",
         "@typescript-eslint/types": "^5.38.1",
         "eslint": "^8.24.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-airbnb-typescript": "17.0.0",
+        "eslint-config-mantine": "^2.0.0",
         "eslint-config-next": "12.3.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^8.0.1",
+        "install-peers": "^1.0.4",
         "lint-staged": "^13.0.3",
         "prettier": "2.7.1",
         "typescript": "^4.8.4"
     },
     "lint-staged": {
-        "*.ts, *.tsx": "eslint --fix",
-        "**/*": "prettier --write --ignore-unknown"
+        "*.ts, *.tsx": "eslint --fix"
     }
 }
