--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "@tabler/icons": "^1.101.0",
         "next": "12.3.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-twitter-embed": "^4.0.4"
     },
     "devDependencies": {
         "@types/node": "18.8.0",
