--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@emotion/react": "^11.10.4",
         "@emotion/server": "^11.10.0",
         "@mantine/core": "^5.5.1",
+        "@mantine/form": "^5.5.1",
         "@mantine/hooks": "^5.5.1",
         "@mantine/next": "^5.5.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
