--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "@mantine/next": "^5.5.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
+        "eslint": "^8.24.0",
         "next": "12.3.1",
+        "prettier": "^2.7.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-twitter-embed": "^4.0.4"
@@ -30,7 +32,6 @@
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "^5.38.1",
         "@typescript-eslint/types": "^5.38.1",
-        "eslint": "^8.24.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "17.0.0",
         "eslint-config-mantine": "^2.0.0",
@@ -43,7 +44,6 @@
         "husky": "^8.0.1",
         "install-peers": "^1.0.4",
         "lint-staged": "^13.0.3",
-        "prettier": "2.7.1",
         "typescript": "^4.8.4"
     },
     "lint-staged": {
