--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
         "eslint": "^8.24.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "next": "12.3.1",
         "prettier": "^2.7.1",
         "react": "18.2.0",
