--- a/package.json
+++ b/package.json
@@ -42,12 +42,11 @@
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "husky": "^8.0.1",
         "install-peers": "^1.0.4",
         "lint-staged": "^13.0.3",
         "typescript": "^4.8.4"
     },
     "lint-staged": {
-        "*.ts, *.tsx": "eslint --fix"
+        "": "eslint --fix"
     }
 }
