--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "prepare": "husky install"
+        "lint": "next lint"
     },
     "dependencies": {
         "@babel/core": "^7.19.3",
