--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "api-types": "npx openapi-typescript https://sziduzdwgufnuimsxbgw.supabase.co/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN6aWR1emR3Z3VmbnVpbXN4Ymd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjQ0ODkxMjUsImV4cCI6MTk4MDA2NTEyNX0.w8RKURHfy5O1d5bYEbrYEtCu-fnLUOX7lBlXi6BXjmU --output types/supabase.ts"
     },
     "dependencies": {
         "@babel/core": "^7.19.3",
@@ -16,11 +17,12 @@
         "@mantine/form": "^5.5.1",
         "@mantine/hooks": "^5.5.1",
         "@mantine/next": "^5.5.1",
+        "@mantine/ssr": "^5.5.2",
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
         "eslint": "^8.24.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "next": "12.3.1",
+        "next": "latest",
         "prettier": "^2.7.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
