--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nextjs",
+    "name": "jaycamper",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -10,42 +10,45 @@
         "api-types": "npx openapi-typescript https://sziduzdwgufnuimsxbgw.supabase.co/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN6aWR1emR3Z3VmbnVpbXN4Ymd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjQ0ODkxMjUsImV4cCI6MTk4MDA2NTEyNX0.w8RKURHfy5O1d5bYEbrYEtCu-fnLUOX7lBlXi6BXjmU --output types/supabase.ts"
     },
     "dependencies": {
-        "@babel/core": "^7.19.3",
-        "@emotion/react": "^11.10.4",
-        "@emotion/server": "^11.10.0",
-        "@mantine/core": "^5.5.1",
-        "@mantine/form": "^5.5.1",
-        "@mantine/hooks": "^5.5.1",
-        "@mantine/next": "^5.5.1",
-        "@mantine/ssr": "^5.5.2",
+        "@emotion/react": "11.10.4",
+        "@emotion/server": "11.10.0",
+        "@mantine/core": "5.5.4",
+        "@mantine/form": "5.5.4",
+        "@mantine/hooks": "5.5.4",
+        "@mantine/next": "5.5.4",
+        "@mantine/notifications": "5.5.4",
+        "@next/bundle-analyzer": "^12.3.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
-        "eslint": "^8.24.0",
-        "eslint-plugin-prettier": "^4.2.1",
         "next": "latest",
-        "prettier": "^2.7.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-twitter-embed": "^4.0.4"
     },
     "devDependencies": {
+        "@babel/core": "^7.19.3",
+        "@emotion/babel-plugin": "^11.10.2",
+        "@next/eslint-plugin-next": "^12.3.1",
+        "@testing-library/dom": "^8.18.1",
+        "@testing-library/react": "^13.4.0",
         "@types/node": "18.8.0",
         "@types/react": "18.0.21",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "^5.38.1",
-        "@typescript-eslint/types": "^5.38.1",
+        "babel-loader": "^8.2.5",
+        "eslint": "^8.24.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "17.0.0",
         "eslint-config-mantine": "^2.0.0",
-        "eslint-config-next": "12.3.1",
-        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
         "install-peers": "^1.0.4",
         "lint-staged": "^13.0.3",
-        "typescript": "^4.8.4"
+        "prettier": "^2.7.1",
+        "typescript": "^4.8.4",
+        "webpack": "^5.74.0"
     },
     "lint-staged": {
         "": "eslint --fix"
