--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "next": "latest",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "18.2.0",
         "react-twitter-embed": "^4.0.4"
     },
