--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
         "next": "latest",
+        "next-qrcode": "^2.2.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
         "react-beautiful-dnd": "^13.1.1",
