--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "dependencies": {
         "@emotion/react": "11.10.4",
         "@emotion/server": "11.10.0",
-        "@mantine/core": "5.5.4",
+        "@mantine/core": "^5.5.4",
         "@mantine/form": "5.5.4",
-        "@mantine/hooks": "5.5.4",
+        "@mantine/hooks": "^5.5.4",
         "@mantine/next": "5.5.4",
-        "@mantine/notifications": "5.5.4",
+        "@mantine/notifications": "^5.5.4",
         "@next/bundle-analyzer": "^12.3.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
