--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@next/bundle-analyzer": "^12.3.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
-        "next": "latest",
+        "next": "12.3.4",
         "next-qrcode": "^2.2.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
@@ -35,7 +35,7 @@
         "@testing-library/dom": "^8.18.1",
         "@testing-library/react": "^13.4.0",
         "@types/node": "18.8.0",
-        "@types/react": "18.0.21",
+        "@types/react": "^18.0.25",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "^5.38.1",
         "babel-loader": "^8.2.5",
