--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@emotion/react": "11.10.4",
         "@emotion/server": "11.10.0",
+        "@hcaptcha/react-hcaptcha": "^1.4.4",
         "@mantine/core": "^5.5.4",
         "@mantine/form": "5.5.4",
         "@mantine/hooks": "^5.5.4",
@@ -20,6 +21,8 @@
         "@next/bundle-analyzer": "^12.3.1",
         "@supabase/supabase-js": "^2.0.0-rc.10",
         "@tabler/icons": "^1.101.0",
+        "crypto-js": "^4.1.1",
+        "formik": "^2.2.9",
         "next": "12.3.4",
         "next-qrcode": "^2.2.0",
         "prop-types": "^15.8.1",
@@ -34,6 +37,7 @@
         "@next/eslint-plugin-next": "^12.3.1",
         "@testing-library/dom": "^8.18.1",
         "@testing-library/react": "^13.4.0",
+        "@types/crypto-js": "^4.1.1",
         "@types/node": "18.8.0",
         "@types/react": "^18.0.25",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
