--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
         "@mantine/next": "5.5.4",
         "@mantine/notifications": "^5.5.4",
         "@next/bundle-analyzer": "^12.3.1",
-        "@supabase/supabase-js": "^2.0.0-rc.10",
+        "@supabase/auth-helpers-nextjs": "^0.5.2",
+        "@supabase/auth-helpers-react": "^0.3.1",
+        "@supabase/auth-ui-react": "^0.2.6",
+        "@supabase/supabase-js": "^2.1.1",
+        "@supabase/ui": "^0.36.5",
         "@tabler/icons": "^1.101.0",
         "crypto-js": "^4.1.1",
         "formik": "^2.2.9",
